k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vot-express-service
  namespace: default
  labels:
    app: vot-express-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: vot-express-app
