k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vot-project-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api.vot-project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vot-express-service
                port:
                  number: 80
